rdb-sql/test/rdb/compile_fail/insert_values_mismatch.cpp
#include "test_fail.hpp"

void test() {
  insert_into(p)(p.id).values("Homer");
}

